# math

./: .coderabbit.yaml  .gitignore  .hlint.yaml  .oxlintrc.json  .prettierignore  AGENTS.md  LICENSE  LICENSE-CC-BY-4.0  LICENSE-MIT  Makefile  README.md  cabal.project  fourmolu.yaml  lefthook.yml  math-project.cabal  mise.toml  project.code-workspace  ruff.toml  setup.sh
.codex/: config.toml
.codex/rules/: project.rules
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  deploy-pages.yml
polish-space-ch1/: lake-manifest.json  lakefile.toml  manifest.json  tex
polish-space-ch1/lean/: PolishSpaceBook.lean
polish-space-ch1/src/: polish-space-ch1.json  polish-space-ch1.md
polish-space/tex/: macros.tex  references.bib
tests/: run-book-filter-golden.hs  test_booklink_coverage.py  test_booklink_sourcemap.py  test_latex_lock.py  test_vendor_notices.py
tests/fixtures/: bad-decl-export-end.md  bad-decl-import.md  bad-decl-nested-export.md  bad-decl-scope-end.md  bad-decl-unclosed-export.md  bad-decl-unclosed-scope.md  bad-forward-without-define.md  bad-mathmeta-unknown-notation-type.md  bad-mathmeta-with-define.md  bad-mathmeta-with-nested-leak.md  bad-notation-before-define.md  bad-section-ref.md  bad-term-forward-without-define.md  dependency-graph-partless-chapter.md  math-bracket-intervals.md  (+7 more)
tools/: book_manifest.py  booklink_coverage.py  booklink_sourcemap.py  books_mk.py  enable_booklink_highlight.py  fetch_treesitter_assets.sh  latex_lock.py  publish_math.sh  split_preview_tex.py  split_skip_blocks.py  vendor_notices.py  wait-pr-merged.sh
(+79 files in other folders)
